ksvc-core.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: public-education-core
  namespace: default
spec:
  runLatest:
    configuration:
      build:
        apiVersion: build.knative.dev/v1alpha1
        kind: Build
        spec:
          serviceAccountName: build-bot
          source:
            git:
              url: https://github.com/sw300/public-education-monolithic.git
              revision: master
          template:
            name: kaniko
            arguments:
              - name: IMAGE
                value: docker.io/jinyoung/app-from-source:latest
      revisionTemplate:
        spec:
          container:
            image: docker.io/jinyoung/app-from-source:latest
            imagePullPolicy: Always
            env:
              - name: VERSION
                value: "v3"
