ksvc-marketing.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: public-education-marketing
  namespace: default
spec:
  runLatest:
    configuration:
      build:
        apiVersion: build.knative.dev/v1alpha1
        kind: Build
        spec:
          serviceAccountName: build-bot
          source:
            git:
              url: https://github.com/sw300/public-education-marketing.git
              revision: master
          template:
            name: kaniko
            arguments:
              - name: IMAGE
                value: docker.io/jinyoung/public-education-marketing:latest
      revisionTemplate:
        spec:
          container:
            image: docker.io/jinyoung/public-education-marketing:latest
            imagePullPolicy: Always
            env:
              - name: SIMPLE_MSG
                value: "Hello from the sample app! v3"
