gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-education-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: public-education
spec:
  hosts:
  - "*"
  gateways:
  - public-education-gateway
  http:
  - match:
    - uri:
        prefix: /courses
    route:
    - destination:
        host: public-education-core-00002-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: public-education-core
        port:
          number: 80
